POC | MapStruct